# olKAN

./: .gitignore  README.md  alembic.ini  change_log.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/ai/: embeddings.py  knowledge_graph.py  quality_assessment.py  vector_search.py
app/ai/agents/: base_agent.py
app/api/: deps.py
app/api/ai/: search.py
app/api/v1/: datasets.py  health.py
app/core/: config.py  database.py  hybrid_storage.py  weaviate_client.py
app/models/: ai_schemas.py  database_models.py  enums.py  schemas.py
